Add sql populate files and created /api/cells/nearby endpoint
