# geocell/src/main/kotlin/org/sdato/geocell/dto/response/CellCsvImportResponse.kt
@@ -1,0 +1,8 @@
+package org.sdato.geocell.dto.response
+
+data class CellCsvImportResponse(
+	val rowsProcessed: Int,
+	val inserted: Int,
+	val updated: Int,
+	val polygonsUpserted: Int
+)
