# geocell/src/main/kotlin/org/sdato/geocell/dto/response/NearbyCellsResponse.kt
@@ -1,0 +1,6 @@
+package org.sdato.geocell.dto.response
+
+data class NearbyCellsResponse(
+	val centralCell: CellResponse,
+	val cellsInRadius: List<CellResponse>
+)
